k8sprjs/nextcloud.old/components/server-nextcloud/resources/server-apache-nextcloud.statefulset.no-ssl.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: server-apache-nextcloud
spec:
  replicas: 1
  serviceName: server-apache-nextcloud
  template:
    spec:
      containers:
      - name: server
        image: nextcloud:22.2-apache
        ports:
        - containerPort: 443
        lifecycle:
          postStart:
            exec:
              command:
              - "sh"
              - "-c"
              - |
                chown www-data:www-data /var/www/html/data
                apt-get update
                apt-get install -y openrc
                start-stop-daemon --start --background --pidfile /cron.pid --exec /cron.sh
        resources:
          limits:
            memory: 512Mi
        volumeMounts:
        - name: apache-config
          subPath: ports.conf
          mountPath: /etc/apache2/ports.conf
        - name: apache-config
          subPath: 000-default.conf
          mountPath: /etc/apache2/sites-available/000-default.conf
        - name: html-storage
          mountPath: /var/www/html
        - name: data-storage
          mountPath: /var/www/html/data
      - name: metrics
        image: xperimental/nextcloud-exporter:0.4.0-15-gbb88fb6
        ports:
        - containerPort: 9205
        resources:
          limits:
            memory: 32Mi
      volumes:
      - name: apache-config
        configMap:
          name: server-apache-nextcloud
          defaultMode: 0644
          items:
          - key: ports.conf
            path: ports.conf
          - key: 000-default.conf
            path: 000-default.conf
      - name: html-storage
        persistentVolumeClaim:
          claimName: html-server-nextcloud
      - name: data-storage
        persistentVolumeClaim:
          claimName: data-server-nextcloud
