k8sprjs/nextcloud.old/components/server-nextcloud/resources/server-nginx-nextcloud.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: server-nginx-nextcloud
spec:
  replicas: 1
  serviceName: server-nginx-nextcloud
  template:
    spec:
      containers:
      - name: fpm
        image: nextcloud:22.2-fpm-alpine
        ports:
        - containerPort: 9000
        lifecycle:
          postStart:
            exec:
              command:
              - "sh"
              - "-c"
              - |
                chown www-data:www-data /var/www/html/data
                apk add openrc
                start-stop-daemon --background /cron.sh
        resources:
          limits:
            memory: 512Mi
        volumeMounts:
        - name: nginx-config
          subPath: zz-docker.conf
          mountPath: /usr/local/etc/php-fpm.d/zz-docker.conf
        - name: html-storage
          mountPath: /var/www/html
        - name: data-storage
          mountPath: /var/www/html/data
      - name: server
        image: nginx:1.21-alpine
        ports:
        - containerPort: 443
        volumeMounts:
        - name: certificates
          subPath: wildcard.deimos.cloud-tls.crt
          mountPath: /etc/nginx/cert/wildcard.deimos.cloud-tls.crt
        - name: certificates
          subPath: wildcard.deimos.cloud-tls.key
          mountPath: /etc/nginx/cert/wildcard.deimos.cloud-tls.key
        - name: nginx-config
          subPath: dhparam.pem
          mountPath: /etc/ssl/dhparam.pem
        - name: nginx-config
          subPath: nginx.conf
          mountPath: /etc/nginx/nginx.conf
        - name: html-storage
          mountPath: /var/www/html
        - name: data-storage
          mountPath: /var/www/html/data
      - name: metrics
        image: xperimental/nextcloud-exporter:0.4.0-15-gbb88fb6
        ports:
        - containerPort: 9205
        resources:
          limits:
            memory: 32Mi
      hostNetwork: true
      volumes:
      - name: nginx-config
        configMap:
          name: server-nginx-nextcloud
          defaultMode: 0444
          items:
          - key: dhparam.pem
            path: dhparam.pem
          - key: nginx.conf
            path: nginx.conf
          - key: zz-docker.conf
            path: zz-docker.conf
      - name: certificates
        secret:
          secretName: wildcard.deimos.cloud-tls
          defaultMode: 0444
          items:
          - key: tls.crt
            path: wildcard.deimos.cloud-tls.crt
          - key: tls.key
            path: wildcard.deimos.cloud-tls.key
      - name: html-storage
        persistentVolumeClaim:
          claimName: html-server-nextcloud
      - name: data-storage
        persistentVolumeClaim:
          claimName: data-server-nextcloud
