k8sprjs/nextcloud.old/components/server-nextcloud/resources/server-apache-nextcloud.service.clusterip.yaml
apiVersion: v1
kind: Service

metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9205"
  name: server-apache-nextcloud
spec:
  type: ClusterIP
  clusterIP: 10.43.100.3
  ports:
  - port: 443
    protocol: TCP
    name: server
  - port: 9205
    protocol: TCP
    name: metrics
