k8sprjs/nextcloud.old/components/server-nextcloud/resources/server-nginx-nextcloud.service.loadbalancer.yaml
apiVersion: v1
kind: Service

metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9205"
  name: server-nginx-nextcloud
spec:
  type: LoadBalancer
  clusterIP: 10.43.100.3
  loadBalancerIP: 192.168.1.42
  ports:
  - port: 443
    protocol: TCP
    name: server
  - port: 9205
    protocol: TCP
    name: metrics
