k8sprjs/nextcloud.old/components/server-nextcloud/resources/server-apache-nextcloud.ingressroute.traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: server-apache-nextcloud
spec:
  entryPoints:
    - websecure
  tls:
    secretName: wildcard.deimos.cloud-tls
  routes:
  - match: Host(`nextcloud.deimos.cloud`) || Host(`nxc.deimos.cloud`)
    kind: Rule
    services:
    - name: server-apache-nextcloud
      kind: Service
      port: 443
